# aetherpy

./: .gitignore  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  setup.cfg  setup.py  test_requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project-goal.md
.github/workflows/: main.yml
aetherpy/: __init__.py  run_plot_model_block_results.py  run_plot_model_results.py
aetherpy/io/: __init__.py  __init__.py~  fetch_routines.py  read_routines.py
aetherpy/plot/: __init__.py  data_prep.py  movie_routines.py  standard_plots.py
aetherpy/tests/: __init__.py  test_io_fetch.py  test_io_read.py  test_plot_movie.py  test_plot_prep.py  test_utils_inputs.py  test_utils_time.py  utils.py
aetherpy/tests/test_data/: 3DBFI_20110320_000000_g0000.nc  3DBFI_20110320_000000_g0001.nc
aetherpy/utils/: __init__.py  inputs.py  inputs.py~  time_conversion.py
files/: make_samples.sh
