[metadata]
name = aetherpy
version = file: aetherpy/version.txt
url = https://github.com/AetherModel/aetherpy
author = aetherpy development team
author_email = aether-core@umich.edu
description = 'Python support for the Aether model'
keywords =
    Aether
    AetherModel
    ionosphere
    thermosphere
    space-weather
    space-physics
    forecasting
    modelling
    modeling
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Atmospheric Science
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
setup_requires = setuptools >= 38.6; pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires = matplotlib
		   netCDF4
		   numpy

[flake8]
max-line-length = 80
ignore = 
  D200
  D202
  W503
  aetherpy/__init__.py F401 E402
  aetherpy/io/__init__.py F401
  aetherpy/plot/__init__.py F401
  aetherpy/utils/__init__.py F401
